// Generated by sylk.build
syntax = "proto3";

package protot.core;



message Config {

	protot.core.NodeType node_type = 1;
	int32 num_workers = 2;
	int32 grpc_port = 3;
	uint64 graceful_timeout = 4;
	protot.core.LoadBalancer load_balancer = 5;
}


enum LoadBalancer {
	ROUND_ROBIN = 0;
}

// The possible node types for proto tasker process
enum NodeType {
	SINGLE_PROCESS = 0;
	WORKER = 1;
	SCHEDULER = 2;
}