// Generated by sylk.build
syntax = "proto3";

package protot.scheduler.v1;



import "protot/core/task.proto";

service SchedulerService {
	rpc Execute (protot.scheduler.v1.ExecuteRequest) returns (protot.scheduler.v1.ExecuteResponse);
	rpc Schedule (protot.scheduler.v1.ScheduleRequest) returns (protot.scheduler.v1.ScheduleResponse);
}

message ScheduleRequest {

	protot.core.Task task = 1;
}

message ScheduleResponse {

	int32 scheduled_task_id = 1;
}

message ExecuteResponse {

	string task_id = 1;
	protot.core.TaskState state = 2;
}

message ExecuteRequest {

	protot.core.Task task = 1;
}